# ricochet-robot-solver

./: .gitignore  .travis.yml  Cargo.toml  README.md  elm-package.json  evaluation.md  index.html  shell.nix  travis.yml  upload_editor.sh
editor/: BoardConfig.elm  Draw.elm  Main.elm  Model.elm  View.elm  elm-package.json
experiments/: .gitignore  RL-solver.ipynb
ricli/: Cargo.toml
ricli/src/: main.rs
ricochet_board/: Cargo.toml
ricochet_board/src/: generator.rs  lib.rs  positions.rs  template.rs
ricochet_board/tests/: movement.rs  test.json
ricochet_environment/: Cargo.toml
ricochet_environment/ricochet_env/: env.py
ricochet_environment/src/: builder.rs  lib.rs
ricochet_solver/: Cargo.toml
ricochet_solver/benches/: benchmarks.rs
ricochet_solver/src/: a_star.rs  breadth_first.rs  iterative_deepening.rs  lib.rs  mcts.rs  util.rs
ricochet_solver/tests/: solve.rs  test.json
solution_generator/: Cargo.toml
solution_generator/src/: main.rs
src/: main.rs
