[package]
name = "ricochet_env"
version = "0.1.0"
authors = ["Carl Scherer"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.13.1", features = ["extension-module"] }
ricochet_board = { path = "../ricochet_board" }

[package.metadata.maturin]
requires-dist = ["gym"]
