[package]
name = "ricochet_solver"
version = "0.1.0"
authors = ["carl"]

[dependencies]
ricochet_board = { path = "../ricochet_board" }
rustc-serialize = "0.3"
enum_primitive = "0.1.1"
num = "0.1.37"

[profile.test]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
