[package]
name = "ricochet_solver"
version = "0.1.0"
authors = ["carl"]
edition = "2018"

[dependencies]
ricochet_board = { path = "../ricochet_board" }
rustc-serialize = "0.3.24"
fnv = "1.0.7"

[dev-dependencies]
rand = "0.7.3"
rayon = "1.3.0"
itertools = "0.9.0"
chrono = "0.4.11"

[profile.test]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
