[package]
name = "ricochet_solver"
version = "0.1.0"
authors = ["Carl Scherer <dev@cscher.com"]
edition = "2018"

[dependencies]
chrono = "0.4.34"
fxhash = "0.2.1"
float-ord = "0.3.2"
getset = "0.1.2"
indexmap = "2.2.3"
priority-queue = "1.4.0"
rand = "0.8.5"
ricochet_board = { path = "../ricochet_board" }

[dev-dependencies]
criterion = "0.5"
itertools = "0.12.1"
rayon = "1.8.1"

[[bench]]
name = "benchmarks"
harness = false
