[package]
name = "solution_generator"
version = "0.1.0"
authors = ["Carl Scherer <dev@cscher.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.34", features = ["serde"]}
csv = "1.3.0"
itertools = "0.12.1"
rand = "0.8.5"
rayon = "1.8.1"
ricochet_board = { path = "../ricochet_board" }
ricochet_solver = { path = "../ricochet_solver" }
serde = { version = "1.0.196", features = ["derive"] }
